--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button type="submit">Adicionar+</button>
         </form>
        
-        <table cellspacing ='0'>
+        <table cellspacing ="0">
           <thead>
             <tr>
                <th>
@@ -42,8 +42,8 @@
         <tfoot>
             <tr>
                 <td>Média final</td>
-                <td id="media-final-valor">7</td>
-                <td id="media-final-resultado"><span class="resultado reprovado">Aprovado</span></td>
+                <td id="media-final-valor">---</td>
+                <td id="media-final-resultado">---</td>
             </tr>
         </tfoot>
        </table>
